Fix drag handle in guide element is not visible bugs

--- a/src/css/calendar.css
+++ b/src/css/calendar.css
@@ -208,9 +208,9 @@
 }
 
 .view-time-event {
-    position: absolute;
+    position: relative;
     left: 0px;
-    right: 7px;
+    margin-right: 7px;
     height: 100%;
     background-color: #A16946;
     font-size: 0.8em;
@@ -242,12 +242,14 @@
     left: 0px;
 }
 
-.view-time-move-guide .view-time-event {
+.view-time-move-guide .view-time-event,
+.view-time-move-guide .view-time-resize-handle {
     opacity: 0.7;
     z-index: 97;
 }
 
-.view-time-resize-guide .view-time-event{
+.view-time-resize-guide .view-time-event,
+.view-time-resize-guide .view-time-resize-handle {
     opacity: 0.7;
     z-index: 97;
 }
